# fastapi-architecture

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  directories.py  log_conf.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2778dff96180_initial_migration.py  45ac7bb448bb_add_feature.py  9b9790ebebb9_add_column_in_feature_table_size.py  b7ac3745c356_user_table.py  f3caf22afafa_alter_feature_table.py
app/: main.py  server.py
app/application/: __init__.py
app/application/auth/v1/: router.py  service.py
app/application/personalization/v1/: enums.py  exception.py  router.py  service.py
app/application/user/v1/: exception.py  router.py  service.py
app/core/: dto.py  exceptions.py  repository.py
app/core/configs/: __init__.py
app/core/db/: session.py  transactional.py
app/core/fastapi/dependencies/: __init__.py  permission.py
app/core/fastapi/middlewares/: __init__.py  auth.py  pyinstrument.py  sqlalchemy.py
app/core/helpers/: redis.py  token.py
app/core/helpers/cache/: cache_manager.py  custom_key_maker.py  redis_backend.py
app/domain/auth/dto/: jwt.py
app/domain/auth/usecase/: jwt.py
app/domain/personalization/dto/: feature.py
app/domain/personalization/entity/: feature.py
docker/: Dockerfile  docker-compose.yaml  init.sql  locust_init.sql  test_init.sql
tests/: conftest.py
tests/core/exceptions/: test_base.py
tests/core/helpers/: test_token.py
tests/support/: feature_fixture.py  test_db_coordinator.py  token.py  user_fixture.py
traffic_test/: locust.py  locustfile.py
(+27 files in other folders)
